--- a/public/stylesheets/admin/polls.css
+++ b/public/stylesheets/admin/polls.css
@@ -91,3 +91,6 @@ table.calendar tbody tr td:first-child {
 table.calendar tbody tr td:last-child {
   border-right: 1px solid black;
 }
+.month_label, .day_header {
+  color:grey
+}
